@@ -333,6 +333,7 @@ DEFINST(mov_rm8_r8, 0x88, SKIP, REG, SKIP, 0)
 DEFINST(mov_rm16_r16, 0x89, SKIP, REG, SKIP, prefix_op)
 DEFINST(mov_rm32_r32, 0x89, SKIP, REG, SKIP, 0)
 DEFINST(mov_r8_rm8, 0x8a, SKIP, REG, SKIP, 0)
+DEFINST(mov_r16_rm16, 0x8b, SKIP, REG, SKIP, prefix_op)
 DEFINST(mov_r32_rm32, 0x8b, SKIP, REG, SKIP, 0)
 DEFINST(mov_al_moffs8, 0xa0, SKIP, SKIP, ID, 0)
 DEFINST(mov_ax_moffs16, 0xa1, SKIP, SKIP, ID, prefix_op)
